<resources>
    <string name="app_name">My AppList</string>
    <string name="action_export">导出到文件</string>
    <string name="action_import">导入程序列表</string>
    <string name="text_appName">三国杀</string>
    <string name="text_edition">5.1.1</string>
    <string name="text_appSize">115MB</string>
    <string name="text_packageName">com.dashabi.dashabi.dashabi.dashabi.dashabi.dashabi.dashabi.dashabi.caoshushu</string>
    <string name="text_installTime">2015年11月12日</string>
    <string name="action_copy">copy</string>
    <string name="sort_way">排序方式:</string>
</resources>
